<?xml version="1.0"?>

<package format="2">
  <name>cartographer_mr500</name>
  <version>0.3.0</version>
  <description>
    Cartographer configurations and launch files for mr500 robots.
  </description>
  <maintainer email="tianjiaoliao@cuhk.edu.cn">
    The  Authors
  </maintainer>
  <license>Apache 2.0</license>

  <url>https://gitlab.com/hcchou/cartographer_m500</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>g++-static</build_depend>

  <depend>cartographer_ros</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

  <test_depend>rosunit</test_depend>
</package>
